Checking for beta 3.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@4951 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -6,6 +6,9 @@ label.confirm.password = &Confirm Password:
 label.server = &Server:
 label.create.account = Create &Account:
 label.close = C&lose:
+label.ok = OK
+label.cancel = Cancel
+label.use.default = Use Default
 
 # Account Creation
 account.create.username.error = Please specify a username for the account.
@@ -24,3 +27,35 @@ account.create.create.account = Create New Account
 account.create.registration = Account Registration
 account.create.register.account = Register a new account to chat
 
+# Login Dialog
+login.dialog.save.password = Save &Password
+login.dialog.auto.login = &Auto Login
+login.dialog.server = &Server:
+login.dialog.accounts = &Accounts
+login.dialog.advanced = Ad&vanced
+login.dialog.connection = Connecting. Please wait...
+
+# Login Settings
+login.settings.general = General
+login.settings.proxy = Proxy
+login.settings.port = &Port:
+login.settings.response.timeout = &Response Timeout (sec):
+login.settings.auto.login = &Auto Login
+login.settings.host = &Host:
+login.settings.auto.discovery = &Automatically discover host and port
+login.settings.resource = &Resource:
+login.settings.connection = Connection
+login.settings.title = Advanced Connection Preferences
+login.settings.preference.window = Preference Window
+login.settings.error.time.out = You must supply a valid Time out value.
+login.settings.error.invalid.time.out = Invalid Time Out
+login.settings.valid.port = You must supply a valid Port.
+login.settings.invalid.port = Invalid Port
+login.settings.supply.resource = You must supply a resource
+login.settings.invalid.resource = Invalid Resource
+login.settings.proxy.server = &Use Proxy Server
+login.settings.protocol = &Protocol:
+login.settings.host = &Host:
+login.settings.port = P&ort:
+login.settings.username = &Username:
+login.settings.password = P&assword:
