--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -59,3 +59,38 @@ login.settings.host = &Host:
 login.settings.port = P&ort:
 login.settings.username = &Username:
 login.settings.password = P&assword:
+
+# org.jivesoftware.spark
+# org.jivesoftware.spark.component
+# org.jivesoftware.spark.component.borders
+# org.jivesoftware.spark.comopnent.browser
+# org.jivesoftware.spark.component.panes
+# org.jivesoftware.spark.component.renderer
+# org.jivesoftware.spark.component.tabbedpane
+# org.jivesoftware.spark.filetransfer
+# org.jivesoftware.spark.filetransfer.preferences
+# org.jivesoftware.spark.plugin
+# org.jivesoftware.spark.preference
+# org.jivesoftware.spark.search
+# org.jivesoftware.spark.ui
+# org.jivesoftware.spark.ui.conferences
+# org.jivesoftware.spark.ui.rooms
+# org.jivesoftware.spark.ui.status
+# org.jivesoftware.spark.util
+# org.jivesoftware.spark.util.log
+# org.jivesoftware.sparkimpl.plugin.alerts
+# org.jivesoftware.sparkimpl.plugin.bookmarks
+# org.jivesoftware.sparkimpl.plugin.chat
+# org.jivesoftware.sparkimpl.plugin.emoticons
+# org.jivesoftware.sparkimpl.plugin.filetransfer.transfer
+# org.jivesoftware.sparkimpl.plugin.filetransfer.transfer.ui
+# org.jivesoftware.sparkimpl.plugin.gateways
+# org.jivesoftware.sparkimpl.plugin.gateways.transports
+# org.jivesoftware.sparkimpl.plugin.jabber
+# org.jivesoftware.sparkimpl.plugin.layout
+# org.jivesoftware.sparkimpl.plugin.manager
+# org.jivesoftware.sparkimpl.plugin.phone
+# org.jivesoftware.sparkimpl.plugin.scratchpad
+# org.jivesoftware.sparkimpl.plugin.transcripts
+# org.jivesoftware.sparkimpl.plugin.viewer
+# org.jivesoftware.sparkimpl.preference
