--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -94,3 +94,12 @@ login.settings.password = P&assword:
 # org.jivesoftware.sparkimpl.plugin.transcripts
 # org.jivesoftware.sparkimpl.plugin.viewer
 # org.jivesoftware.sparkimpl.preference
+# org.jivesoftware.sparkimpl.preference.chat
+# org.jivesoftware.sparkimpl.preference.notifications
+# org.jivesoftware.sparkimpl.preference.sounds
+# org.jivesoftware.sparkimpl.profile
+# org.jivesoftware.sparkimpl.profile.ext
+# org.jivesoftware.sparkimpl.search.users
+# org.jivesoftware.sparkimpl.settings
+# org.jivesoftware.sparkimpl.settings.local
+# org.jivesoftware.sparkimpl.updater
