Updating conference invites.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5094 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -61,7 +61,16 @@ login.settings.username = &Username:
 login.settings.password = P&assword:
 
 # org.jivesoftware.spark
+
 # org.jivesoftware.spark.component
+recieved = Received:
+error.title = An error has been detected. Please report to support@jivesoftware.com.
+open = Open
+hide = Hide
+exit = Exit
+status = Status
+
+
 # org.jivesoftware.spark.component.borders
 # org.jivesoftware.spark.comopnent.browser
 # org.jivesoftware.spark.component.panes
