Login settings are set.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5116 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -1,39 +1,74 @@
 # Spark
 
-label.username = &Username:
-label.password = &Password:
-label.confirm.password = &Confirm Password:
-label.server = &Server:
-label.create.account = Create &Account:
-label.close = C&lose:
+ok = Ok
+cancel = Cancel
+use.default = Use Default
+
+button.create.account = &Create Account
+button.close = C&lose
+button.advanced = Ad&vanced
+
+checkbox.save.password = &Save Password
+checkbox.auto.login = &Auto Login
+checkbox.use.proxy.server = &Use Proxy Server
+checkbox.auto.discover.port = &Automatically discover host and port
+
+
+label.username = &Username
+label.password = &Password
+label.confirm.password = &Confirm Password
+label.server = &Server
+label.create.account = Create &Account
+label.close = C&lose
 label.ok = OK
 label.cancel = Cancel
 label.use.default = Use Default
+label.port = &Port
+label.response.timeout = Response &Timeout
+label.auto.login = &Auto Login
+label.old.ssl = &Use OLD SSL port method
+label.host = &Host
+label.resource = &Resource
+label.protocol = &Protocol
+label.accounts = &Accounts
 
-# Account Creation
-account.create.username.error = Please specify a username for the account.
-account.create.password.error = Please specify a password for this account.
-account.create.confirmation.password.error = Please specify a confirmation password.
-account.create.account.error = Please specify the server to create the account on.
-account.create.passwords.no.match = The passwords do not match. Please confirm passwords.
-account.create.problem = Account Creation Problem
-account.create.registering = Registering with {0}. Please wait...
-account.create.connection.failed = Unable to connect to {0}.
-account.create.account = Unable to create account.
-account.create.already.exists = Account already exists. Please try a different username.
-account.create.created = A new account has been created.
-account.create.created.title = Account Created
-account.create.create.account = Create New Account
-account.create.registration = Account Registration
-account.create.register.account = Register a new account to chat
 
-# Login Dialog
-login.dialog.save.password = Save &Password
-login.dialog.auto.login = &Auto Login
-login.dialog.server = &Server:
-login.dialog.accounts = &Accounts
-login.dialog.advanced = Ad&vanced
-login.dialog.connection = Connecting. Please wait...
+message.username.error = Specify a username for the account.
+message.password.error = Specify a password for this account.
+message.confirmation.password.error = Specify a confirmation password.
+message.account.error = Specify the server to create the account on.
+message.registering = Registering with {0}. Please wait...
+message.connection.failed = Unable to connect to {0}.
+message.create.account = Account could not be created.
+message.already.exists = Account already exists. Please try a different username.
+message.account.created = New account has been created.
+message.account.create = Create a new chat account.
+message.connecting.please.wait = Connecting. Please wait...
+message.supply.valid.timeout = Supply a valid time out value.
+message.supply.valid.port = Supply a valid port.
+message.supply.resource = Supply a valid resource.
+
+title.passwords.no.match = Confirm passwords.
+title.create.problem = Account Creation Problem
+title.account.created = Account Created
+title.create.new.account = Create New Account
+title.account.create.registration = Account Registration
+title.register.account = Register New Account
+title.notification = Notification
+title.advanced.connection.preferences = Advanced Connection Preferences
+title.preferences = Preferences
+title.error = Error
+
+
+
+
+tab.general = General
+tab.proxy = Proxy
+
+
+group.connection = Connection
+
+
 
 # Login Settings
 login.settings.general = General
@@ -63,12 +98,7 @@ login.settings.password = P&assword:
 # org.jivesoftware.spark
 
 # org.jivesoftware.spark.component
-recieved = Received:
-error.title = An error has been detected. Please report to support@jivesoftware.com.
-open = Open
-hide = Hide
-exit = Exit
-status = Status
+
 
 
 # org.jivesoftware.spark.component.borders
