small logging bug fix.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5117 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -47,6 +47,12 @@ message.connecting.please.wait = Connecting. Please wait...
 message.supply.valid.timeout = Supply a valid time out value.
 message.supply.valid.port = Supply a valid port.
 message.supply.resource = Supply a valid resource.
+message.current.status = Let others know your current status or activity.
+message.disconnected.error = Your connection was closed due to an error.
+message.disconnected.conflict.error = Your connection was closed due to the same user logging in from another location.
+message.locked.workstation = User has locked their workstation.
+message.away.idle = Away due to idle.
+
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -58,8 +64,21 @@ title.notification = Notification
 title.advanced.connection.preferences = Advanced Connection Preferences
 title.preferences = Preferences
 title.error = Error
+title.status.message = Status Message
+title.spark.preferences = Spark Preferences
 
-
+menuitem.contacts = Con&tacts
+menuitem.actions = &Actions
+menuitem.exit = &Exit
+menuitem.plugins = &Plugins
+menuitem.logout.no.status = L&og out
+menuitem.logout.with.status = Log out with &status
+menuitem.show.traffic = Show Traffic Window
+menuitem.check.for.updates = Check For Updates
+menuitem.help = &Help
+menuitem.preferences = &Preferences
+menuitem.about = &About
+menuitem.online.help = &Online Help
 
 
 tab.general = General
@@ -70,37 +89,10 @@ group.connection = Connection
 
 
 
-# Login Settings
-login.settings.general = General
-login.settings.proxy = Proxy
-login.settings.port = &Port:
-login.settings.response.timeout = &Response Timeout (sec):
-login.settings.auto.login = &Auto Login
-login.settings.host = &Host:
-login.settings.auto.discovery = &Automatically discover host and port
-login.settings.resource = &Resource:
-login.settings.connection = Connection
-login.settings.title = Advanced Connection Preferences
-login.settings.preference.window = Preference Window
-login.settings.error.time.out = You must supply a valid Time out value.
-login.settings.error.invalid.time.out = Invalid Time Out
-login.settings.valid.port = You must supply a valid Port.
-login.settings.invalid.port = Invalid Port
-login.settings.supply.resource = You must supply a resource
-login.settings.invalid.resource = Invalid Resource
-login.settings.proxy.server = &Use Proxy Server
-login.settings.protocol = &Protocol:
-login.settings.host = &Host:
-login.settings.port = P&ort:
-login.settings.username = &Username:
-login.settings.password = P&assword:
 
+# TO DO
 # org.jivesoftware.spark
-
 # org.jivesoftware.spark.component
-
-
-
 # org.jivesoftware.spark.component.borders
 # org.jivesoftware.spark.comopnent.browser
 # org.jivesoftware.spark.component.panes
