--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -31,7 +31,7 @@ label.host = &Host
 label.resource = &Resource
 label.protocol = &Protocol
 label.accounts = &Accounts
-
+label.receieved = &Received
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
@@ -52,6 +52,8 @@ message.disconnected.error = Your connection was closed due to an error.
 message.disconnected.conflict.error = Your connection was closed due to the same user logging in from another location.
 message.locked.workstation = User has locked their workstation.
 message.away.idle = Away due to idle.
+message.default.error = An error has been detected. Please report to support@jivesoftware.com.
+message.new.message = New message from {0}.
 
 
 title.passwords.no.match = Confirm passwords.
@@ -66,19 +68,25 @@ title.preferences = Preferences
 title.error = Error
 title.status.message = Status Message
 title.spark.preferences = Spark Preferences
+title.alert = Alert
+title.broadcast.message = Broadcast Message
+title.tray.information = Tray Information
 
-menuitem.contacts = Con&tacts
-menuitem.actions = &Actions
-menuitem.exit = &Exit
+menuitem.contacts = Contacts
+menuitem.actions = Actions
+menuitem.exit = Exit
 menuitem.plugins = &Plugins
-menuitem.logout.no.status = L&og out
-menuitem.logout.with.status = Log out with &status
+menuitem.logout.no.status = Log out
+menuitem.logout.with.status = Log out with status
 menuitem.show.traffic = Show Traffic Window
 menuitem.check.for.updates = Check For Updates
-menuitem.help = &Help
-menuitem.preferences = &Preferences
-menuitem.about = &About
-menuitem.online.help = &Online Help
+menuitem.help = Help
+menuitem.preferences = Preferences
+menuitem.about = About
+menuitem.online.help = Online Help
+menuitem.open = Open
+menuitem.hide = Hide
+menuitem.status = Status
 
 
 tab.general = General
