--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -54,7 +54,9 @@ message.locked.workstation = User has locked their workstation.
 message.away.idle = Away due to idle.
 message.default.error = An error has been detected. Please report to support@jivesoftware.com.
 message.new.message = New message from {0}.
-
+message.send.file.to.user = Send files to this user.
+message.send.picture = Send a picture of your desktop.
+message.sent.offline.files = You have just been sent offline file(s).
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -71,6 +73,7 @@ title.spark.preferences = Spark Preferences
 title.alert = Alert
 title.broadcast.message = Broadcast Message
 title.tray.information = Tray Information
+title.select.file.to.send = Select File(s) To Send
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
@@ -87,7 +90,7 @@ menuitem.online.help = Online Help
 menuitem.open = Open
 menuitem.hide = Hide
 menuitem.status = Status
-
+menuitem.view.downloads = View Downloads
 
 tab.general = General
 tab.proxy = Proxy
@@ -99,13 +102,6 @@ group.connection = Connection
 
 
 # TO DO
-# org.jivesoftware.spark
-# org.jivesoftware.spark.component
-# org.jivesoftware.spark.component.borders
-# org.jivesoftware.spark.comopnent.browser
-# org.jivesoftware.spark.component.panes
-# org.jivesoftware.spark.component.renderer
-# org.jivesoftware.spark.component.tabbedpane
 # org.jivesoftware.spark.filetransfer
 # org.jivesoftware.spark.filetransfer.preferences
 # org.jivesoftware.spark.plugin
