--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -7,6 +7,7 @@ use.default = Use Default
 button.create.account = &Create Account
 button.close = C&lose
 button.advanced = Ad&vanced
+button.browse = &Browse...
 
 checkbox.save.password = &Save Password
 checkbox.auto.login = &Auto Login
@@ -32,6 +33,9 @@ label.resource = &Resource
 label.protocol = &Protocol
 label.accounts = &Accounts
 label.receieved = &Received
+label.transfer.timeout = &Transfer Timeout(min):
+label.transfer.download.directory = &Download Directory:
+label.find = &Find
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
@@ -57,6 +61,9 @@ message.new.message = New message from {0}.
 message.send.file.to.user = Send files to this user.
 message.send.picture = Send a picture of your desktop.
 message.sent.offline.files = You have just been sent offline file(s).
+message.spark.secure = Spark is running in secure mode.
+message.search.for.contacts = Search for contacts.
+
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -74,6 +81,7 @@ title.alert = Alert
 title.broadcast.message = Broadcast Message
 title.tray.information = Tray Information
 title.select.file.to.send = Select File(s) To Send
+title.choose.directory = Choose Directory
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
@@ -102,10 +110,6 @@ group.connection = Connection
 
 
 # TO DO
-# org.jivesoftware.spark.filetransfer
-# org.jivesoftware.spark.filetransfer.preferences
-# org.jivesoftware.spark.plugin
-# org.jivesoftware.spark.preference
 # org.jivesoftware.spark.search
 # org.jivesoftware.spark.ui
 # org.jivesoftware.spark.ui.conferences
