1) i18n work. 2) Update Login Screen.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5146 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -8,6 +8,12 @@ button.create.account = &Create Account
 button.close = C&lose
 button.advanced = Ad&vanced
 button.browse = &Browse...
+button.approve = &Approve
+button.deny = &Deny
+button.accept = &Accept
+button.profile = *Profile
+button.add.a.contact = &Add A Contact
+button.reconnect = &Reconnect
 
 checkbox.save.password = &Save Password
 checkbox.auto.login = &Auto Login
@@ -36,6 +42,9 @@ label.receieved = &Received
 label.transfer.timeout = &Transfer Timeout(min):
 label.transfer.download.directory = &Download Directory:
 label.find = &Find
+label.rename.to = Rename to
+label.contact.to.find = Contact To Find?
+label.available.users.in.roster =   &Available users in Roster
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
@@ -63,7 +72,24 @@ message.send.picture = Send a picture of your desktop.
 message.sent.offline.files = You have just been sent offline file(s).
 message.spark.secure = Spark is running in secure mode.
 message.search.for.contacts = Search for contacts.
-
+message.end.conversation = Would you like to end this session?
+message.end.chat = Would you like to end this chat?
+message.close.this.chat = Close this chat
+message.close.other.chats = Close all other chats
+message.close.stale.chats = Close stale chats
+message.last.message.received = Last message received on {0}
+message.shared.group = Shared Group
+message.is.shared.group = {0} is a shared group.
+message.delete.confirmation = Are you sure you want to delete {0}?
+message.idle.for = Idle for {0}
+message.enter.broadcast.message = Enter message to broadcast to selected users.
+message.name.of.group = Name of Group
+message.approve.subscription = Allow {0} to add you to their roster?
+message.add.user = Add user to your roster?
+message.general.error = You have lost your connection to the server due to {0}.
+message.add.a.contact = Add a contact.
+message.generic.reconnect.message = You have lost your connection to the server. To login again, click on the Reconnect button below.
+message.select.one.or.more = Select one ore more users in your Roster.
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -82,6 +108,13 @@ title.broadcast.message = Broadcast Message
 title.tray.information = Tray Information
 title.select.file.to.send = Select File(s) To Send
 title.choose.directory = Choose Directory
+title.confirmation = Confirmation
+title.last.activity = Last Activity
+title.add.new.group = Add New Group
+title.add.to.roster = Add To Roster
+title.find.contacts = Find Contacts
+title.rename.roster.group = Rename Roster Group
+title.roster = Roster
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
@@ -99,10 +132,27 @@ menuitem.open = Open
 menuitem.hide = Hide
 menuitem.status = Status
 menuitem.view.downloads = View Downloads
+menuitem.save = Save
+menuitem.add.contact = Add Contact
+menuitem.add.contact.group = Add Contact Group
+menuitem.remove.from.group = Remove From Group
+menuitem.start.a.chat = Start a Chat
+menuitem.rename = Rename
+menuitem.delete = Delete
+menuitem.remove.from.roster = Remove from Roster
+menuitem.view.profile = View Profile
+menuitem.subscribe.to = Subscribe To
+menuitem.send.a.message = Send a Message...
+menuitem.show.empty.groups = Show Empty Groups
+menuitem.send.a.file = Send A File
+menuitem.view.last.activity = View Last Activity
+
+
+
 
 tab.general = General
 tab.proxy = Proxy
-
+tab.contacts = Contacts
 
 group.connection = Connection
 
