--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -3,6 +3,7 @@
 ok = Ok
 cancel = Cancel
 use.default = Use Default
+close = Close
 
 button.create.account = &Create Account
 button.close = C&lose
@@ -45,6 +46,7 @@ label.find = &Find
 label.rename.to = Rename to
 label.contact.to.find = Contact To Find?
 label.available.users.in.roster =   &Available users in Roster
+label.time = Time: {0}
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
