--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -4,6 +4,9 @@ ok = Ok
 cancel = Cancel
 use.default = Use Default
 close = Close
+create = Create
+invite = Invite
+
 
 button.create.account = &Create Account
 button.close = C&lose
@@ -15,14 +18,28 @@ button.accept = &Accept
 button.profile = *Profile
 button.add.a.contact = &Add A Contact
 button.reconnect = &Reconnect
+button.add = &Add
+button.roster = &Roster
+button.add.bookmark = Add Bookmark
+button.remove.bookmark = Remove Bookmark
+button.bookmark.room = &Bookmark Room
+button.create.room = &Create or Join Room
+button.join.room = &Join Selected Room
+button.refresh = &Refresh
+button.find = &Find
 
 checkbox.save.password = &Save Password
 checkbox.auto.login = &Auto Login
 checkbox.use.proxy.server = &Use Proxy Server
 checkbox.auto.discover.port = &Automatically discover host and port
+checkbox.permanent = Room is &permanent
+checkbox.private.room = Room &is private
 
 
 label.username = &Username
+label.name = &Name
+label.room.name = &Room Name
+label.room.topic= Room &Topic
 label.password = &Password
 label.confirm.password = &Confirm Password
 label.server = &Server
@@ -47,6 +64,14 @@ label.rename.to = Rename to
 label.contact.to.find = Contact To Find?
 label.available.users.in.roster =   &Available users in Roster
 label.time = Time: {0}
+label.add.conference.service = &Add Conference Service
+label.add.jid = &Add JID
+label.message = &Message
+label.room = &Room
+label.invited.users = Invited Users
+label.new.nickname = New Nickname
+label.server.address = &Server Address
+
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
@@ -92,6 +117,34 @@ message.general.error = You have lost your connection to the server due to {0}.
 message.add.a.contact = Add a contact.
 message.generic.reconnect.message = You have lost your connection to the server. To login again, click on the Reconnect button below.
 message.select.one.or.more = Select one ore more users in your Roster.
+message.add.conference.service = Add a conference service.
+message.service.already.exists = Service is already in your service list.
+message.searching.please.wait = Searching. Please wait...
+message.conference.service.error = Unable to locate the conference service.
+message.create.or.join.room = Create or join a conference chat room
+message.specify.name.error = Specify a valid name.
+message.password.private.room.error = Specify password for the private room
+message.passwords.no.match = Passwords do not match.
+message.enter.valid.jid = Enter a valid Jabber ID
+message.please.join.in.conference = Please join me in a conference.
+message.invite.users.to.conference = Invite users to a conference room.
+message.specify.users.to.join.conference = Specify users to join this conference room.
+message.no.room.to.join.error = No room to join
+message.participants.in.room = Participants In Room
+message.you.have.been.kicked = You have been kicked out of this room.
+message.kicked.error = You are not able to kick {0} out of this room.
+message.you.have.been.banned = You have been banned from this room.
+message.nickname.in.use = Nickname in use. Please specify another Nickname
+message.update.room.list = Update Room List
+message.join.conference.room = Join Conference Room
+message.select.add.room.to.add = Please select a room to add to your service list.
+message.bookmark.temporary.room.error = You cannot bookmark temporary rooms
+message.select.room.to.join = Select room to join.
+message.conference.info.error = Unable to retrieve conference information. Please try back later.
+message.add.favorite.room = Add room to favorites list or join directly.
+message.select.room.to.enter = Specify room to enter.
+message.find.conference.services = Find conference services
+
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -117,13 +170,26 @@ title.add.to.roster = Add To Roster
 title.find.contacts = Find Contacts
 title.rename.roster.group = Rename Roster Group
 title.roster = Roster
+title.create.or.join = Create/Join
+title.conference.rooms = Conference Rooms
+title.invite.to.conference = Invite To Conference
+title.room.information = Room Information
+title.change.nickname = Change Nickname
+title.group.chat = Group Chat
+title.create.or.bookmark.room = Join or Bookmark Room
+title.browse.room.service = Browse Conference Rooms - {0}
+title.name = Name
+title.address = Address
+title.occupants = Occupants
+title.browse.conference.services = Browse Conference Services
+title.find.conference.service = Find Conference Service
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
 menuitem.exit = Exit
 menuitem.plugins = &Plugins
 menuitem.logout.no.status = Log out
-menuitem.logout.with.status = Log out with status
+menuitem.logout.with.status = Log out with reason
 menuitem.show.traffic = Show Traffic Window
 menuitem.check.for.updates = Check For Updates
 menuitem.help = Help
@@ -148,22 +214,40 @@ menuitem.send.a.message = Send a Message...
 menuitem.show.empty.groups = Show Empty Groups
 menuitem.send.a.file = Send A File
 menuitem.view.last.activity = View Last Activity
+menuitem.unban = Unban
+menuitem.ban = Ban
+menuitem.browse.service = Browse Service
+menuitem.remove.service = Remove Service
+menuitem.join.room = Join Room
+menuitem.remove.bookmark = Remove Bookmark
+menuitem.join.on.startup = Join On Startup
+menuitem.view.room.info = View Room Info
+menuitem.remove = Remove
+menuitem.change.nickname = Change Nickname
+menuitem.block.user = Block User
+menuitem.unblock.user = Unblock User
+menuitem.kick.user = Kick User
+menuitem.voice = Voice
+menuitem.revoke.voice = Revoke Voice
+menuitem.grant.voice = Grant Voice
+menuitem.ban.user = Ban User
+menuitem.grant.moderator = Grant Moderator
+menuitem.revoke.moderator = Revoke Moderator
+menuitem.invite.users = Invite Users
+menuitem.invite.group.to.conference = Invite group to conference
+menuitem.start.a.conference = Start a conference...
 
 
-
+tree.conference.services = Conference Services
 
 tab.general = General
 tab.proxy = Proxy
 tab.contacts = Contacts
 
 group.connection = Connection
-
-
-
+group.conferences.found = Conference Services Found
 
 # TO DO
-# org.jivesoftware.spark.search
-# org.jivesoftware.spark.ui
 # org.jivesoftware.spark.ui.conferences
 # org.jivesoftware.spark.ui.rooms
 # org.jivesoftware.spark.ui.status
