--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -6,6 +6,14 @@ use.default = Use Default
 close = Close
 create = Create
 invite = Invite
+date = Date
+from = From
+room.name = Room Name
+join = Join
+description = Description
+subject = Subject
+occupants = Occupants
+
 
 
 button.create.account = &Create Account
@@ -27,6 +35,11 @@ button.create.room = &Create or Join Room
 button.join.room = &Join Selected Room
 button.refresh = &Refresh
 button.find = &Find
+button.update = &Update
+button.cancel = &Cancel
+button.accept = &Accept
+button.decline = &Decline
+button.join = &Join
 
 checkbox.save.password = &Save Password
 checkbox.auto.login = &Auto Login
@@ -71,6 +84,8 @@ label.room = &Room
 label.invited.users = Invited Users
 label.new.nickname = New Nickname
 label.server.address = &Server Address
+label.nickname = &Nickname
+
 
 
 message.username.error = Specify a username for the account.
@@ -144,7 +159,10 @@ message.conference.info.error = Unable to retrieve conference information. Pleas
 message.add.favorite.room = Add room to favorites list or join directly.
 message.select.room.to.enter = Specify room to enter.
 message.find.conference.services = Find conference services
-
+message.specify.information.for.conference = Specify information for conference room.
+message.no.description.available = No description available
+message.no.subject.available = No subject available
+message.room.information.for = Room information for {0}
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -183,6 +201,12 @@ title.address = Address
 title.occupants = Occupants
 title.browse.conference.services = Browse Conference Services
 title.find.conference.service = Find Conference Service
+title.configure.chat.room = Configure Chat Room
+title.conference.invitation = Conference Invitation
+title.join.conference.room = Join Conference Room
+title.view.room.information = View Room Information
+
+
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
@@ -239,6 +263,7 @@ menuitem.start.a.conference = Start a conference...
 
 
 tree.conference.services = Conference Services
+tree.users.in.room = Users In Room
 
 tab.general = General
 tab.proxy = Proxy
@@ -246,9 +271,9 @@ tab.contacts = Contacts
 
 group.connection = Connection
 group.conferences.found = Conference Services Found
+group.comma.delimited = Comma Delimited
 
 # TO DO
-# org.jivesoftware.spark.ui.conferences
 # org.jivesoftware.spark.ui.rooms
 # org.jivesoftware.spark.ui.status
 # org.jivesoftware.spark.util
