--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -163,6 +163,50 @@ message.specify.information.for.conference = Specify information for conference 
 message.no.description.available = No description available
 message.no.subject.available = No subject available
 message.room.information.for = Room information for {0}
+message.view.information.about.this.user = View information about this user.
+message.add.this.user.to.your.roster = Add this user to your buddy list.
+message.came.online = {0} is online at {1}
+message.went.offline = {0} went offline at {1}
+message.offline.error = The user will be unable to receive offline messages.
+message.offline = The user is offline and will receive the message on their next login.
+message.is.typing.a.message = {0} is typing a message...
+message.enter.new.subject = Enter new subject
+message.confirm.destruction.of.room = Destroying the room removes all users from the room. Continue?
+message.room.destruction.reason = Reason for destroying the room?
+message.user.left.room = {0} has left the room.
+message.user.joined.room = {0} has joined the room.
+message.chat.session.ended = Chat session has ended on {0}
+message.subject.change.error = You are not allowed to change the subject of this room.
+message.forbidden.error = Received a forbidden error from the server.
+message.room.destroyed = This room has been destroyed due to the following reason: {0}
+message.subject.has.been.changed.to = The subject has been changed to {0}.
+
+message.user.kicked.from.room = {0} has been kicked out of the room.
+message.user.given.voice = {0} has been given a voice in this room.
+message.user.voice.revoked = Voice has been revoked for {0}.
+message.user.banned = {0} has been banned from this room.
+message.user.granted.membership = {0} has been given membership priviliges.
+message.user.revoked.membership = Membership has been revoked for {0}.
+message.user.granted.moderator = {0} has been granted moderator privileges.
+message.user.revoked.moderator = Moderator priviliges have been revoked for {0}.
+message.user.granted.owner = {0} has been granted owner privileges.
+message.user.revoked.owner = Owner priviliges have been revoked for {0}.
+message.user.granted.admin = {0} has been granted administrator priviliges.
+message.user.revoked.admin = Administrator privileges have been revoked for {0}.
+message.user.nickname.changed = {0} is now knowns as {1}.
+message.your.kicked = You have been kicked by {0}.
+message.your.voice.revoked = You have been given a voice in this chat.
+message.your.voice.revoked = Your voice has been revoked.
+message.your.banned = You have been banned from this room.
+message.your.membership.granted = You have been granted membership privileges.
+message.your.membership.revoked = Your membership has been revoked.
+message.your.moderator.granted = You have been granted moderator privileges.
+message.your.moderator.revoked = Your moderator privileges have been revoked.
+message.your.ownership.granted = Your have been granted owner privileges.
+message.your.ownership.revoked = Your owner privilieges have been revoked.
+message.your.admin.granted = You have been granted administrator privileges.
+message.your.revoked.granted = Your admin privileges have been revoked.
+
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -205,6 +249,10 @@ title.configure.chat.room = Configure Chat Room
 title.conference.invitation = Conference Invitation
 title.join.conference.room = Join Conference Room
 title.view.room.information = View Room Information
+title.configure.room = Configure Room
+title.change.subject = Change Subject
+title.enter.reason = Enter Reason
+title.room.destroyed = Room Destroyed
 
 
 
@@ -260,7 +308,8 @@ menuitem.revoke.moderator = Revoke Moderator
 menuitem.invite.users = Invite Users
 menuitem.invite.group.to.conference = Invite group to conference
 menuitem.start.a.conference = Start a conference...
-
+menuitem.change.subject = Change Subject
+menuitem.destroy.room = Destroy Room
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
