--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -40,6 +40,7 @@ button.cancel = &Cancel
 button.accept = &Accept
 button.decline = &Decline
 button.join = &Join
+button.save.for.future.use = &Save for future use
 
 checkbox.save.password = &Save Password
 checkbox.auto.login = &Auto Login
@@ -85,7 +86,9 @@ label.invited.users = Invited Users
 label.new.nickname = New Nickname
 label.server.address = &Server Address
 label.nickname = &Nickname
-
+label.presence = &Presence
+label.message = &Message
+label.priority = P&riority
 
 
 message.username.error = Specify a username for the account.
@@ -253,6 +256,8 @@ title.configure.room = Configure Room
 title.change.subject = Change Subject
 title.enter.reason = Enter Reason
 title.room.destroyed = Room Destroyed
+title.edit.custom.message = Edit Custom Messages
+title.set.status.message = Set Status Message
 
 
 
@@ -273,12 +278,14 @@ menuitem.hide = Hide
 menuitem.status = Status
 menuitem.view.downloads = View Downloads
 menuitem.save = Save
+menuitem.add = Add
 menuitem.add.contact = Add Contact
 menuitem.add.contact.group = Add Contact Group
 menuitem.remove.from.group = Remove From Group
 menuitem.start.a.chat = Start a Chat
 menuitem.rename = Rename
 menuitem.delete = Delete
+menuitem.edit = Edit
 menuitem.remove.from.roster = Remove from Roster
 menuitem.view.profile = View Profile
 menuitem.subscribe.to = Subscribe To
@@ -310,6 +317,9 @@ menuitem.invite.group.to.conference = Invite group to conference
 menuitem.start.a.conference = Start a conference...
 menuitem.change.subject = Change Subject
 menuitem.destroy.room = Destroy Room
+menuitem.set.status.message = Set status message...
+menuitem.edit.status.message = Edit custom status messages...
+
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
@@ -323,7 +333,6 @@ group.conferences.found = Conference Services Found
 group.comma.delimited = Comma Delimited
 
 # TO DO
-# org.jivesoftware.spark.ui.rooms
 # org.jivesoftware.spark.ui.status
 # org.jivesoftware.spark.util
 # org.jivesoftware.spark.util.log
