--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -89,6 +89,7 @@ label.nickname = &Nickname
 label.presence = &Presence
 label.message = &Message
 label.priority = P&riority
+label.enter.address = Enter Address
 
 
 message.username.error = Specify a username for the account.
@@ -209,7 +210,12 @@ message.your.ownership.granted = Your have been granted owner privileges.
 message.your.ownership.revoked = Your owner privilieges have been revoked.
 message.your.admin.granted = You have been granted administrator privileges.
 message.your.revoked.granted = Your admin privileges have been revoked.
-
+message.send.a.broadcast = Send a broadcast
+message.broadcast.from = Broadcast from {0}
+message.enter.message.to.broadcast = Enter message to broadcast to your entire roster list.
+message.broadcast.message.sent = The broadcast message has been sent.
+message.broadcast.to = Enter message to broadcast to {0}
+message.broadcasted.to = The message has been broadcasted to the following users:\n
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -258,6 +264,8 @@ title.enter.reason = Enter Reason
 title.room.destroyed = Room Destroyed
 title.edit.custom.message = Edit Custom Messages
 title.set.status.message = Set Status Message
+title.broadcast.message = Broadcast Message
+title.start.chat = Start Chat
 
 
 
@@ -319,7 +327,7 @@ menuitem.change.subject = Change Subject
 menuitem.destroy.room = Destroy Room
 menuitem.set.status.message = Set status message...
 menuitem.edit.status.message = Edit custom status messages...
-
+menuitem.broadcast.to.group = Broadcast message to group
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
